# altium_monkey

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: altium_design.md  draftsman.md  index.md  intlib.md  pcbdoc.md  pcblib.md  prjpcb.md  schdoc.md  schlib.md
docs/api_patterns/: index.md
docs/examples/: index.md
docs/format_contracts/: altium_design.md  draftsman.md  index.md  intlib.md  pcbdoc.md  pcblib.md  prjpcb.md  schdoc.md  schlib.md  svg.md
docs/schemas/: index.md
examples/: manifest.toml
examples/draftsman_add_image/: README.md  draftsman_add_image.py
examples/draftsman_create_blank_project/: README.md  draftsman_create_blank_project.py
examples/draftsman_multipage_notes/: README.md  draftsman_multipage_notes.py
examples/draftsman_netclass_autodoc/: README.md  assembly_highlight.py  autodoc_config.py  draftsman_netclass_autodoc.py
examples/hello_draftsman/: README.md  hello_draftsman.py
examples/hello_pcblib/: README.md
examples/intlib_extract_sources/: README.md  intlib_extract_sources.py
examples/pcbdoc_add_differential_pairs/: README.md  pcbdoc_add_differential_pairs.py
examples/pcbdoc_add_free_3d_step/: README.md
examples/pcbdoc_add_hole_tolerances/: README.md  pcbdoc_add_hole_tolerances.py
examples/pcbdoc_add_via_ipc4761_matrix/: README.md  pcbdoc_add_via_ipc4761_matrix.py
examples/pcbdoc_svg/: README.md  (+1 more)
tests/: test_assets.py  test_schlib_apply_json_recolor.py
tools/: altium_viewer_probe.py
(+80 files in other folders)
