[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altium-monkey"
dynamic = ["version"]
description = "A toolkit for manipulating Altium files"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Eli Hughes", email = "ehughes@wavenumber.net" },
]
dependencies = [
    "pillow==11.2.1",
    "freetype-py",
    "uharfbuzz",
    "wn-geometer==2026.5.25",
    "lxml==6.0.2",
    "lz4>=4.4.5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
examples = [
    "cadquery",
]
release = [
    "build>=1.2",
    "pytest>=8.0",
    "twine>=5.0",
]
test = [
    "cadquery",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/altium_monkey"
Repository = "https://github.com/wavenumber-eng/altium_monkey"

[tool.hatch.build.targets.sdist]
include = [
    "src/py/altium_monkey/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py/altium_monkey"]

[tool.hatch.version]
path = "src/py/altium_monkey/_version.py"
